# demo-abenity-api-with-rust-reqwest

./: Cargo.toml
src/: main.rs
src/abenity/: mod.rs
src/abenity/api/: config.rs
src/abenity/api/endpoints/: categories.rs  offers.rs
src/abenity/api/entities/: category.rs  location.rs  logo.rs  mod.rs  offer.rs  vendor.rs  vendor_offers.rs
src/abenity/perks/api/: config.rs
src/abenity/perks/api/endpoints/: categories.rs  mod.rs  offers.rs
src/abenity/perks/api/entities/: category.rs  location.rs  logo.rs  mod.rs  offer.rs  offer_category.rs  vendor.rs  vendor_offers.rs
